--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -11,6 +11,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Compile LaTeX document
-      uses: xu-cheng/latex-action@master
+      uses: xu-cheng/latex-action@v2
       with:
         root_file: cv.tex
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        path: cv.pdf
