--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Main
+name: Build
 
 on: push
 
@@ -23,7 +23,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/')
     needs: compile
 
     steps:
@@ -34,9 +34,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            TODO
+          release_name: ${{ github.ref }}
 
       - name: Download document
         uses: actions/download-artifact@v1
@@ -49,6 +47,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./cv.pdf
+          asset_path: cv/cv.pdf
           asset_name: cv.pdf
           asset_content_type: application/pdf
